# video-apps

./: .gitignore  README.md  pyproject.toml  video_consumer.py
src/video_apps/: base.py  core.py  utils.py
test/: cam_video_filtering.py  video_consumer.py
video_apps/: base.py  core.py
